Adapting to java 8